--- a/src/components/styles/FormLogin.css
+++ b/src/components/styles/FormLogin.css
@@ -3,16 +3,36 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 10%;
+    width: 100%;
+    height: 100vh;
     padding: 1rem;
-    background-color: #E4DCCF;
-    border-radius: 10%;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-color: #E4DCCF;}
+h2,a,p{
+    color: #576F72;
+}
+
+h2{
+    margin: 20px;
 }
 
 img {
-    width: 10rem;
-    height: 10rem;
+    width: 7rem;
+    height: 7rem;
+}
+
+.divButton{
+    display: flex;
+    justify-content: center;
+}
+
+.inputName input{
+    width: 12rem;
+    height: 2rem;
+}
+
+.inputPassword input{
+    width: 12rem;
+    height: 2rem;
 }
 
 p {
