--- a/src/pages/styles/Login.css
+++ b/src/pages/styles/Login.css
@@ -3,21 +3,24 @@
     height: 100%;
     display: flex;
     flex-direction: row;
-    background-color: #F0EBE3;
+    background-color: #E4DCCF;
 }
 
 .Login-form{
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
     width: 50%;
+    height: 100vh;
 }
 
 .Login-image{
     width: 50%;
-    height: 100%;
+    height: 100vh;
 }
 
 .Login-image img{
-    width: 100%;
-    height: 100%;
+    width: 100vh;
+    height: 100vh;
 }
