--- a/src/components/styles/FormRegister.css
+++ b/src/components/styles/FormRegister.css
@@ -6,7 +6,13 @@
     width: 100%;
     height: 100vh;
     padding: 1rem;
-    background-color: #E4DCCF;}
+    background-color: #E4DCCF;
+}
+
+.inputName input{
+    background-color: #f6f0e8;
+}
+
 h2,a,p{
     color: #576F72;
 }
@@ -16,6 +22,12 @@ label{
 }
 
 .formRegister_image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.formRegister_title{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,6 +51,20 @@ img {
 .inputName input{
     width: 20rem;
     height: 2rem;
+}
+
+.formRegister_form-names{
+    display: flex;
+    flex-direction: row;
+}
+
+.formRegister_form-names div{
+    display: flex;
+    flex-direction: column;
+}
+
+.formRegister_form-names-surname{
+    margin-left: 1rem;
 }
 
 .inputPassword input{
